--- a/PDFParse/PDFParse.csproj
+++ b/PDFParse/PDFParse.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Primitives\PDFXrefEntry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ObjectExtensions.cs" />
+    <Compile Include="StackExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
